--- a/main.tex
+++ b/main.tex
@@ -302,4 +302,5 @@ Anno Accademico 2016/2017}}
 \bibliography{sections/references} 
 \end{flushleft}
 
+\input{sections/ringraziamenti}
 \end{document}
